- Наполнена данными таблица task (liquibase) - Исправлены ошибки в реализации TaskSpecificationConstructor - Переопределены методы equals() и hashCode() у классов User, Task и Comment - Исправлены прочие ошибки и недочеты