@@ -1,49 +1,61 @@
 package dev.trifanya.taskmanagementsystem.service.specification;
 
 import dev.trifanya.taskmanagementsystem.exception.InvalidDataException;
+import dev.trifanya.taskmanagementsystem.model.User;
 import dev.trifanya.taskmanagementsystem.model.task.Task;
+import dev.trifanya.taskmanagementsystem.model.task.TaskPriority;
+import dev.trifanya.taskmanagementsystem.model.task.TaskStatus;
 import lombok.RequiredArgsConstructor;
-import org.springframework.cglib.core.Local;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Component;
 
 import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Map;
-import java.util.Set;
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
 public class TaskSpecificationConstructor {
-    public Specification<Task> createTaskSpecification(String dbColumnName, int userId,
+    public Specification<Task> createTaskSpecification(String fieldName, User user,
                                                        Map<String, String> filters) {
-        Specification<Task> taskSpecification = userIdIs(dbColumnName, userId);
+        Specification<Task> taskSpecification = userIs(fieldName, user);
 
         for (Map.Entry<String, String> filter : filters.entrySet()) {
-            switch (filter.getKey()) {
+            String key = filter.getKey();
+            String[] keyParts = key.split("_");
+            String dateTimeField = null;
+            if (keyParts.length > 1) {
+                dateTimeField = keyParts[0];
+                key = keyParts[1];
+            }
+            switch (key) {
                 case "beforeDateTime":
                     LocalDateTime beforeDate = LocalDateTime.parse(filter.getValue());
-                    taskSpecification.and(dateIsBefore(dbColumnName, beforeDate));
+                    taskSpecification = taskSpecification.and(dateIsBefore(dateTimeField, beforeDate));
                     break;
                 case "afterDateTime":
                     LocalDateTime afterDate = LocalDateTime.parse(filter.getValue());
-                    taskSpecification.and(dateIsAfter(dbColumnName, afterDate));
+                    taskSpecification = taskSpecification.and(dateIsAfter(dateTimeField, afterDate));
                     break;
                 case "dateTimeRange":
                     String[] dates = filter.getValue().split(",");
                     LocalDateTime rangeStart = LocalDateTime.parse(dates[0]);
                     LocalDateTime rangeEnd = LocalDateTime.parse(dates[1]);
-                    taskSpecification.and(dateIsBetween(dbColumnName, rangeStart, rangeEnd));
+                    taskSpecification = taskSpecification.and(dateIsBetween(dateTimeField, rangeStart, rangeEnd));
                     break;
                 case "priorityValues":
-                    Set<String> prioritySet = new HashSet<>(List.of(filter.getValue().split(",")));
-                    taskSpecification.and(taskPriorityInSet(prioritySet));
+                    Set<TaskPriority> prioritySet = Arrays.asList((filter.getValue().split(",")))
+                            .stream()
+                            .map(priorityStr -> TaskPriority.valueOf(priorityStr))
+                            .collect(Collectors.toSet());
+                    taskSpecification = taskSpecification.and(taskPriorityInSet(prioritySet));
                     break;
                 case "statusValues":
-                    Set<String> statusSet = new HashSet<>(List.of(filter.getValue().split(",")));
-                    taskSpecification.and(taskStatusInSet(statusSet));
+                    Set<TaskStatus> statusSet = Arrays.asList(filter.getValue().split(","))
+                            .stream()
+                            .map(statusStr -> TaskStatus.valueOf(statusStr))
+                            .collect(Collectors.toSet());
+                    taskSpecification = taskSpecification.and(taskStatusInSet(statusSet));
                     break;
                 default:
                     throw new InvalidDataException("Неверный формат параметра запроса.");
@@ -56,17 +68,17 @@ public class TaskSpecificationConstructor {
      * Ограничение, при котором ID автора задачи или исполнителя задачи должнен быть равен ID,
      * указанному в параметре userId.
      */
-    public static Specification<Task> userIdIs(String dbColumnName, int userId) {
+    public static Specification<Task> userIs(String fieldName, User user) {
         return (root, query, criteriaBuilder) ->
-                criteriaBuilder.equal(root.get(dbColumnName), userId);
+                criteriaBuilder.equal(root.get(fieldName), user);
     }
 
-    public static Specification<Task> taskPriorityInSet(Set<String> prioritySet) {
+    public static Specification<Task> taskPriorityInSet(Set<TaskPriority> prioritySet) {
         return (root, query, criteriaBuilder) ->
                 criteriaBuilder.in(root.get("priority")).value(prioritySet);
     }
 
-    public static Specification<Task> taskStatusInSet(Set<String> statusSet) {
+    public static Specification<Task> taskStatusInSet(Set<TaskStatus> statusSet) {
         return (root, query, criteriaBuilder) ->
                 criteriaBuilder.in(root.get("status")).value(statusSet);
     }
